Fixing color contrast

--- a/styles.css
+++ b/styles.css
@@ -383,7 +383,7 @@ body {
 
 .see-prj {
   background-color: #7d73fc;
-  color: #ecebff;
+  color: #000000;
   width: 89px;
   height: 48px;
   border: none;
